option java_outer_classname = "LCConfigForDA";
option java_package = "com.navinfo.opentsp.platform.location.protocol.nodecluster";

import "core/proto/nodecluster/common/java/ParameterConfig.proto";

message ConfigForDA{
	repeated	ParameterConfig	paras	=1;
}
